test_regress/t/t_tri_pull2_bad.out
%Error-UNSUPPORTED: t/t_tri_pull2_bad.v:13:10: Unsupported: Conflicting pull directions.
                                             : ... note: In instance 't'
   13 |   pullup p1 (A);
      |          ^~
                    t/t_tri_pull2_bad.v:26:12: ... Location of conflicting pull.
   26 |   pulldown p2 (A);
      |            ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
